--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>日麻比賽直播系統 - HKMSCA</title>
+    <title>日麻比賽直播系統 (牌藝攻防)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
