--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Noto+Serif+TC:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/index-static.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
